HorizOverflow fixed, leftAxis was the problem

--- a/static/estilo2.css
+++ b/static/estilo2.css
@@ -289,7 +289,7 @@ text-align:center;
   .outer{width: 320px;  overflow-x: auto;  }
   .large{font-size: 40px;}
   .middle{font-size: 20px;}
-  .column-left{margin: 0px 0px 0px -5px;}
+  .column-left{margin: 0px 0px 0px -8px;}
   .column-third{margin: 0px -35px 0px 0px;}
   #weather_details .column3{padding: 0px;}
   .column4{width: 50%;}
